--- a/download/index.html
+++ b/download/index.html
@@ -126,7 +126,7 @@
            <span>信管帮</span> 
         </div>
         <div class="box2">TRY TO BE YOUR FAVORITE</div>
-        <a class="box3" href="./code1/xinguanbang1.0.1.apk" download="信管帮">
+        <a class="box3" href="https://XGStudio2023.github.io/download/code1/xinguanbang1.0.1.apk" download="信管帮">
             <div class="icon"></div>
             <span>点击下载</span>
         </a>
