--- a/download/index.html
+++ b/download/index.html
@@ -89,8 +89,8 @@
         .box3 .icon{
             /*
             border: 1px solid red;*/
-            width: .8454rem;
-            height: .8454rem;
+            width: .6039rem;/*25px*/
+            height: .6039rem;
             margin: auto 0rem;
             background: url(./images/appstore1/Android.webp) no-repeat;
             background-size: contain;
