--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ function onSuccess(position) {
             //if(l1 <= 50){
               if(l1 <= 900){
                 alert("当前服务区：HUAT总服务区");
-                window.location.replace("https://xinguanbang.github.io/xinguanbang1.0.1/html/index.html")
+                window.location.replace("https://sourl.cn/SibhWr ")
             }else{
                 alert("抱歉！您所在的地区或位置尚未提供服务，请尝试到达合法服务区域。")
             }
